--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-  "cleanUrls": true
+  "version": 2,
+  "public": "public",
+  "builds": [
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
 }
