--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "use": "@vercel/static"
     },
     {
+      "src": "styles.css",
+      "use": "@vercel/static"
+    },
+    {
       "src": "script.js",
       "use": "@vercel/static"
     },
